2015-06-16  Kevin Murray  <spam@kdmurray.id.au>

   * doc/dev/binary-file-formats.rst: Add documentation of khmer's binary file
   formats.
   * doc/dev/index.rst: Add above docs to developer documentation index.

2015-06-14  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * khmer/__init__.py,lib/{counting,hashbits,hashtable,subset,labelhash}.cc,
   lib/khmer.hh: add signature to beginning of all binary file types
   * tests/test-data/{normC20k20.ct,badversion-k32.tagset,
   goodversion-k32.tagset}: update to new format by prepending "OXLI" to the
   data stream
   * tests/test_{counting_hash,functions,scripts,hashbits,hashbits_obj,
   labelhash}.py: tests should fail, not error (add try, except + assert
   blocks). Adapted other tests to cope with the new file formats
   * lib/magic: new, teaches the unix `file` command about khmer file types
   * doc/index.rst,doc/whats-new-2.0.rst: document these changes

2015-06-14  Titus Brown  <titus@idyll.org>

   * tests/test_counting_hash.py: fixed duplicated test
   'get_kmer_counts_too_short' by changing to 'get_kmer_hashes_too_short'.

2015-06-14  Jacob Fenton  <bocajnotnef@gmail.com>

   * scripts/abundance-dist.py: added weird bigcount circumstance detection
   * tests/test_scripts.py: added test for the above

2015-06-14  Kevin Murray  <spam@kdmurray.id.au>

   * lib/counting.cc: Fix infinite loop in gzipped CountingHash I/O
   * tests/test_counting_hash.py: Add test of large CountingHash I/O
   * setup.cfg: Skip tests with the 'huge' label by default

2015-06-13  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * Makefile, build-jenkins.sh: unify sphinx dependencies
   * scripts/readstats.py: fix typo

2015-06-13  Titus Brown  <titus@idyll.org>

   * doc/dev/getting-started.rst: update instructions for creating a new
   branch name to preferred practice (fix/brief_issue_description, instead
   of fix/issuenum).

2015-06-13  Michael R. Crusoe  <crusoe@ucdavis.edu>
